--- a/notebooks/ebw_metrics_analysis.ipynb
+++ b/notebooks/ebw_metrics_analysis.ipynb
@@ -1318,16 +1318,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 186,
    "outputs": [],
    "source": [
     "df_temp_diff = pd.DataFrame(columns= ['format_code', 'call_letters', 'mediabase_id', 'fav_metric', 'ddl_metric', 'pop', 'metric', 'metric_threshold'])\n",
     "for i in ddl_range:\n",
     "    for fmt in major_formats:\n",
+    "        # print(fmt)\n",
     "        id_cols = ['format_code', 'call_letters', 'mediabase_id']\n",
     "        idx = (df_hits['ddl_track_' + str(int(i))] >= 2) & (df_hits['week_dt'] > df_hits['week_dt_r']) & (df_hits['format_code'] == fmt)\n",
     "\n",
-    "        df_temp  = df_hits.join(df_hits[idx].groupby(['call_letters' , 'mediabase_id']).agg({'week_dt':np.min}), on=['call_letters', 'mediabase_id'], how='right', rsuffix='_brn')\n",
+    "        df_temp  = df_hits.join(df_hits[idx].groupby(['format_code', 'call_letters' , 'mediabase_id']).agg({'week_dt':np.min}), on=['format_code', 'call_letters', 'mediabase_id'], how='right', rsuffix='_brn')\n",
     "        filter_idx_post = (df_temp['week_dt'] > df_temp['week_dt_brn']) & (df_temp['week_dt'] <=  (df_temp['week_dt_brn']) + timedelta(weeks=13)) & (~pd.isna(df_temp['pop']))\n",
     "        df_temp_filter_post = df_temp[filter_idx_post][['format_code', 'call_letters', 'mediabase_id', 'week_dt', 'spins_non_on', 'spins_non_on_prev', 'pop', 'fav_metric', 'ddl_metric']]\n",
     "\n",
@@ -1343,6 +1344,26 @@
     "        temp_diff['metric_threshold'] = str(int(i))\n",
     "\n",
     "        df_temp_diff = pd.concat([temp_diff, df_temp_diff])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['U1', 'H1', 'C1'], dtype=object)"
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.unique(df_temp_diff['format_code'])"
    ],
    "metadata": {
     "collapsed": false
@@ -1370,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 187,
    "outputs": [],
    "source": [
     "df_temp_diff_f2b = pd.DataFrame(columns= ['format_code', 'call_letters', 'mediabase_id', 'fav_metric', 'ddl_metric', 'pop', 'metric', 'metric_threshold'])\n",
@@ -1379,7 +1400,7 @@
     "        id_cols = ['format_code', 'call_letters', 'mediabase_id']\n",
     "        idx = (df_hits['f2b_track_' + '%.2f'%i] >= 2) & (df_hits['week_dt'] > df_hits['week_dt_r']) & (df_hits['format_code'] == fmt)\n",
     "\n",
-    "        df_temp  = df_hits.join(df_hits[idx].groupby(['call_letters' , 'mediabase_id']).agg({'week_dt':np.min}), on=['call_letters', 'mediabase_id'], how='right', rsuffix='_brn')\n",
+    "        df_temp  = df_hits.join(df_hits[idx].groupby(['format_code', 'call_letters' , 'mediabase_id']).agg({'week_dt':np.min}), on=['format_code', 'call_letters', 'mediabase_id'], how='right', rsuffix='_brn')\n",
     "        filter_idx_post = (df_temp['week_dt'] > df_temp['week_dt_brn']) & (df_temp['week_dt'] <=  (df_temp['week_dt_brn']) + timedelta(weeks=13)) & (~pd.isna(df_temp['pop']))\n",
     "        df_temp_filter_post = df_temp[filter_idx_post][['format_code', 'call_letters', 'mediabase_id', 'week_dt', 'spins_non_on', 'spins_non_on_prev', 'pop', 'fav_metric', 'ddl_metric']]\n",
     "\n",
@@ -1423,10 +1444,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 188,
    "outputs": [],
    "source": [
     "df_diff = pd.concat([df_temp_diff, df_temp_diff_f2b])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['U1', 'Y0', 'H1', 'C1', 'O1', 'L1'], dtype=object)"
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.unique(df_diff['format_code'])"
    ],
    "metadata": {
     "collapsed": false
@@ -1454,10 +1495,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 190,
    "outputs": [],
    "source": [
-    "df_diff_summ = df_diff.groupby(['format_code', 'metric', 'metric_threshold']).agg({'mediabase_id':len}).join(pd.DataFrame(df_hits.groupby(['format_code']).apply(lambda x:len(x[['call_letters', 'mediabase_id']].drop_duplicates())), columns=['total_songs']), on = ['format_code'])"
+    "df_diff_summ = df_diff.groupby(['format_code', 'metric', 'metric_threshold']).agg({'mediabase_id':len}).join(pd.DataFrame(df_hits[df_hits['format_code'].isin(major_formats)].groupby(['format_code']).apply(lambda x:len(x[['call_letters', 'mediabase_id']].drop_duplicates())), columns=['total_songs']), on = ['format_code'], how='left')"
    ],
    "metadata": {
     "collapsed": false
@@ -1465,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 191,
    "outputs": [],
    "source": [
     "df_diff_summ.columns = ['burnout_songs', 'total_songs']"
@@ -1476,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 192,
    "outputs": [],
    "source": [
     "df_diff_summ['fav_drop_count'] = df_diff.groupby(['format_code', 'metric', 'metric_threshold']).apply(lambda x: sum(x['fav_metric'] < -3))"
@@ -1487,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 193,
    "outputs": [],
    "source": [
     "df_diff_summ['ddl_inc_count'] = df_diff.groupby(['format_code', 'metric', 'metric_threshold']).apply(lambda x: sum(x['ddl_metric'] > 3))"
@@ -1498,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 194,
    "outputs": [],
    "source": [
     "df_diff_summ['pop_drop_count'] = df_diff.groupby(['format_code', 'metric', 'metric_threshold']).apply(lambda x: sum(x['pop'] < -5))"
@@ -1509,20 +1550,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 197,
    "outputs": [
     {
      "data": {
-      "text/plain": "                                     burnout_songs  total_songs  \\\nformat_code metric metric_threshold                               \nC1          ddl    10                          719         1037   \n                   11                          566         1037   \n                   12                          412         1037   \n                   13                          283         1037   \n                   14                          212         1037   \n...                                            ...          ...   \nY0          f2b    1.30                          4          263   \n                   1.35                          4          263   \n                   1.40                          4          263   \n                   1.45                          4          263   \n                   1.50                          4          263   \n\n                                     fav_drop_count  ddl_inc_count  \\\nformat_code metric metric_threshold                                  \nC1          ddl    10                           139            178   \n                   11                           114            152   \n                   12                            87            112   \n                   13                            73             77   \n                   14                            56             49   \n...                                             ...            ...   \nY0          f2b    1.30                           1              2   \n                   1.35                           1              2   \n                   1.40                           1              2   \n                   1.45                           1              3   \n                   1.50                           1              3   \n\n                                     pop_drop_count  \nformat_code metric metric_threshold                  \nC1          ddl    10                           130  \n                   11                           109  \n                   12                            75  \n                   13                            64  \n                   14                            52  \n...                                             ...  \nY0          f2b    1.30                           1  \n                   1.35                           1  \n                   1.40                           1  \n                   1.45                           1  \n                   1.50                           1  \n\n[159 rows x 5 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th></th>\n      <th>burnout_songs</th>\n      <th>total_songs</th>\n      <th>fav_drop_count</th>\n      <th>ddl_inc_count</th>\n      <th>pop_drop_count</th>\n    </tr>\n    <tr>\n      <th>format_code</th>\n      <th>metric</th>\n      <th>metric_threshold</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">C1</th>\n      <th rowspan=\"5\" valign=\"top\">ddl</th>\n      <th>10</th>\n      <td>719</td>\n      <td>1037</td>\n      <td>139</td>\n      <td>178</td>\n      <td>130</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>566</td>\n      <td>1037</td>\n      <td>114</td>\n      <td>152</td>\n      <td>109</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>412</td>\n      <td>1037</td>\n      <td>87</td>\n      <td>112</td>\n      <td>75</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>283</td>\n      <td>1037</td>\n      <td>73</td>\n      <td>77</td>\n      <td>64</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>212</td>\n      <td>1037</td>\n      <td>56</td>\n      <td>49</td>\n      <td>52</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">Y0</th>\n      <th rowspan=\"5\" valign=\"top\">f2b</th>\n      <th>1.30</th>\n      <td>4</td>\n      <td>263</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1.35</th>\n      <td>4</td>\n      <td>263</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1.40</th>\n      <td>4</td>\n      <td>263</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1.45</th>\n      <td>4</td>\n      <td>263</td>\n      <td>1</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1.50</th>\n      <td>4</td>\n      <td>263</td>\n      <td>1</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>159 rows × 5 columns</p>\n</div>"
+      "text/plain": "   format_code metric metric_threshold  burnout_songs  total_songs  \\\n0           C1    ddl               10            719         1037   \n1           C1    ddl               11            566         1037   \n2           C1    ddl               12            412         1037   \n3           C1    ddl               13            283         1037   \n4           C1    ddl               14            212         1037   \n..         ...    ...              ...            ...          ...   \n85          U1    f2b             1.30             36          673   \n86          U1    f2b             1.35             38          673   \n87          U1    f2b             1.40             47          673   \n88          U1    f2b             1.45             57          673   \n89          U1    f2b             1.50             68          673   \n\n    fav_drop_count  ddl_inc_count  pop_drop_count  burn_perc  fav_drop_perc  \\\n0              139            178             130   0.693346       0.193324   \n1              114            152             109   0.545805       0.201413   \n2               87            112              75   0.397300       0.211165   \n3               73             77              64   0.272903       0.257951   \n4               56             49              52   0.204436       0.264151   \n..             ...            ...             ...        ...            ...   \n85               8             14              12   0.053492       0.222222   \n86              10             13              14   0.056464       0.263158   \n87              14             14              16   0.069837       0.297872   \n88              18             17              17   0.084695       0.315789   \n89              23             18              22   0.101040       0.338235   \n\n    ddl_inc_perc  pop_drop_perc  \n0       0.247566       0.180807  \n1       0.268551       0.192580  \n2       0.271845       0.182039  \n3       0.272085       0.226148  \n4       0.231132       0.245283  \n..           ...            ...  \n85      0.388889       0.333333  \n86      0.342105       0.368421  \n87      0.297872       0.340426  \n88      0.298246       0.298246  \n89      0.264706       0.323529  \n\n[90 rows x 12 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>format_code</th>\n      <th>metric</th>\n      <th>metric_threshold</th>\n      <th>burnout_songs</th>\n      <th>total_songs</th>\n      <th>fav_drop_count</th>\n      <th>ddl_inc_count</th>\n      <th>pop_drop_count</th>\n      <th>burn_perc</th>\n      <th>fav_drop_perc</th>\n      <th>ddl_inc_perc</th>\n      <th>pop_drop_perc</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>C1</td>\n      <td>ddl</td>\n      <td>10</td>\n      <td>719</td>\n      <td>1037</td>\n      <td>139</td>\n      <td>178</td>\n      <td>130</td>\n      <td>0.693346</td>\n      <td>0.193324</td>\n      <td>0.247566</td>\n      <td>0.180807</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>C1</td>\n      <td>ddl</td>\n      <td>11</td>\n      <td>566</td>\n      <td>1037</td>\n      <td>114</td>\n      <td>152</td>\n      <td>109</td>\n      <td>0.545805</td>\n      <td>0.201413</td>\n      <td>0.268551</td>\n      <td>0.192580</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>C1</td>\n      <td>ddl</td>\n      <td>12</td>\n      <td>412</td>\n      <td>1037</td>\n      <td>87</td>\n      <td>112</td>\n      <td>75</td>\n      <td>0.397300</td>\n      <td>0.211165</td>\n      <td>0.271845</td>\n      <td>0.182039</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>C1</td>\n      <td>ddl</td>\n      <td>13</td>\n      <td>283</td>\n      <td>1037</td>\n      <td>73</td>\n      <td>77</td>\n      <td>64</td>\n      <td>0.272903</td>\n      <td>0.257951</td>\n      <td>0.272085</td>\n      <td>0.226148</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>C1</td>\n      <td>ddl</td>\n      <td>14</td>\n      <td>212</td>\n      <td>1037</td>\n      <td>56</td>\n      <td>49</td>\n      <td>52</td>\n      <td>0.204436</td>\n      <td>0.264151</td>\n      <td>0.231132</td>\n      <td>0.245283</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>85</th>\n      <td>U1</td>\n      <td>f2b</td>\n      <td>1.30</td>\n      <td>36</td>\n      <td>673</td>\n      <td>8</td>\n      <td>14</td>\n      <td>12</td>\n      <td>0.053492</td>\n      <td>0.222222</td>\n      <td>0.388889</td>\n      <td>0.333333</td>\n    </tr>\n    <tr>\n      <th>86</th>\n      <td>U1</td>\n      <td>f2b</td>\n      <td>1.35</td>\n      <td>38</td>\n      <td>673</td>\n      <td>10</td>\n      <td>13</td>\n      <td>14</td>\n      <td>0.056464</td>\n      <td>0.263158</td>\n      <td>0.342105</td>\n      <td>0.368421</td>\n    </tr>\n    <tr>\n      <th>87</th>\n      <td>U1</td>\n      <td>f2b</td>\n      <td>1.40</td>\n      <td>47</td>\n      <td>673</td>\n      <td>14</td>\n      <td>14</td>\n      <td>16</td>\n      <td>0.069837</td>\n      <td>0.297872</td>\n      <td>0.297872</td>\n      <td>0.340426</td>\n    </tr>\n    <tr>\n      <th>88</th>\n      <td>U1</td>\n      <td>f2b</td>\n      <td>1.45</td>\n      <td>57</td>\n      <td>673</td>\n      <td>18</td>\n      <td>17</td>\n      <td>17</td>\n      <td>0.084695</td>\n      <td>0.315789</td>\n      <td>0.298246</td>\n      <td>0.298246</td>\n    </tr>\n    <tr>\n      <th>89</th>\n      <td>U1</td>\n      <td>f2b</td>\n      <td>1.50</td>\n      <td>68</td>\n      <td>673</td>\n      <td>23</td>\n      <td>18</td>\n      <td>22</td>\n      <td>0.101040</td>\n      <td>0.338235</td>\n      <td>0.264706</td>\n      <td>0.323529</td>\n    </tr>\n  </tbody>\n</table>\n<p>90 rows × 12 columns</p>\n</div>"
      },
-     "execution_count": 162,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_diff_summ"
+    "df_diff_summ.reset_index()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "outputs": [],
+   "source": [
+    "df_diff_summ['burn_perc'] = df_diff_summ['burnout_songs']/df_diff_summ['total_songs']\n",
+    "df_diff_summ['fav_drop_perc'] = df_diff_summ['fav_drop_count']/df_diff_summ['burnout_songs']\n",
+    "df_diff_summ['ddl_inc_perc'] = df_diff_summ['ddl_inc_count']/df_diff_summ['burnout_songs']\n",
+    "df_diff_summ['pop_drop_perc'] = df_diff_summ['pop_drop_count']/df_diff_summ['burnout_songs']"
    ],
    "metadata": {
     "collapsed": false
@@ -1539,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "outputs": [],
    "source": [],
    "metadata": {
